--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.19",
+    "@stripe/stripe-js": "^1.15.0",
     "graphql": "^15.5.0",
+    "graphql-request": "^3.4.0",
     "next": "10.2.2",
+    "next-auth": "^3.23.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "stripe": "^8.149.0",
+    "superagent": "^6.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
