--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.19",
+    "@chakra-ui/core": "^0.8.0",
+    "@emotion/core": "^10.1.1",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@stripe/stripe-js": "^1.15.0",
+    "emotion-theming": "^11.0.0",
+    "firebase": "^8.6.8",
+    "firebase-admin": "^9.9.0",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "next": "10.2.2",
     "next-auth": "^3.23.3",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "stripe": "^8.149.0",
@@ -22,6 +30,6 @@
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "postcss": "^8.3.0",
-    "tailwindcss": "^2.1.2"
+    "tailwindcss": "^2.2.2"
   }
 }
